--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=root1111
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+jwt.secret.key=Rzd0ITl4UHpAUjJtTHcjUjV2Tms4c1liRDRmSGoxVWVaY0EwclRx
